# NEE_Rendering

./: .gitignore  CMakeLists.txt  Doxygen.config  README.md
include/: camera.hpp  group.hpp  hit.hpp  light.hpp  material.hpp  mesh.hpp  object3d.hpp  parameter.hpp  plane.hpp  ray.hpp  render.hpp  scene_parser.hpp  sphere.hpp  timer.hpp  transform.hpp  triangle.hpp
src/: main.cpp  mesh.cpp  scene_parser.cpp
testcases/: basic.txt  cornellbox.txt  cornellbox_2.txt  cube.txt  final_1.txt  final_2.txt  focus.txt  fresnel.txt  nailong.txt  nailong_1.txt  no_fresnel.txt  reflect.txt  refract.txt  scene01_basic_1.txt  scene04_axes.txt  test.txt  volLight.txt  volLight_2.txt
